[package]
name = "mkrs"
version = "0.25.0"
edition = "2024"
description = "Build automation tool"
repository = "https://github.com/qtfkwk/mkrs"
license = "MIT"

[dependencies]
anstream = "0.6.21"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
dep-graph = { version = "0.2.0", default-features = false }
expanduser = "1.2.2"
glob = "0.3.3"
globset = "0.4.18"
indexmap = "2.12.0"
owo-colors = "4.2.3"
pulldown-cmark = { version = "0.13.0", features = ["simd"] }
regex = "1.12.2"
shlex = "1.3.0"
sprint = "0.12.3"
toml = "0.9.8"

[target.'cfg(unix)'.dependencies]
pager2 = "0.6.3"
